--- a/newsite/mysite/index.html
+++ b/newsite/mysite/index.html
@@ -53,7 +53,7 @@
       <div class="col-md-2">
       </div>
       <div class="col-md-6">
-        <img id="profile" src="/pics/profile.jpg" />
+        <img id="profile" src="/Users/shuyaohe/Desktop/shuyaosite/newsite/pics/profile.jpg" />
       </div>
       <div class="col-md-3">
 
